syntax = "proto3";

package momo_package;

service PaymentService {
    rpc CashIn(FinanceRequest) returns (FinanceResponse){}
    rpc CashOut(FinanceRequest) returns (FinanceResponse){}
    rpc CheckTransactionStatus(StatusRequest) returns ( StatusResponse){}
    rpc CheckUserInfos(UserInfosRequest) returns (UserInfosResponse){}
}

service ProviderService {
    rpc GetProviderInfo(Empty) returns (ProviderInfoResponse){}
}

message Empty {}


message ProviderInfoResponse {
    repeated ProviderInfo providers = 1;
}

message ProviderInfo {
    string operatorName = 1;
    string operatorType = 2;
    string operatorCode = 3;
    repeated string applyCountry = 4;
    ProviderParams params =5;
}

message ProviderParams {
    bool isDepositAvailable = 1;
    bool isWithdrawalAvailable = 2;
    bool isBalanceInfoAvailable = 3;
    bool isCustomerInfoAvailable = 4;
}

message UserInfosRequest {
    string phoneNumber = 1;
    string providerCode = 2;
}

message UserInfosResponse {
    bool success = 1;
    string trace = 2;
    ProviderResponse providerResponse = 3;
    UserData data = 4;
}


message UserData{
    string firstName = 1;
    string lastName = 2;
}

message StatusRequest {
    string id = 1;
    string payToken = 2;
    string mouvement = 3;
    string providerCode = 4;
}

message StatusResponse {
    bool success = 1;
    string trace = 2;
    ProviderResponse providerResponse = 3;
    StatusData data = 4;
}

message StatusData{
    string status = 1;
    string payToken = 2;
    Payer payer = 3;
    Payer payee = 4;
    Payer owner = 5;
    string currency = 6;
    string financialTransactionId = 7;
    string externalId = 8;
    string errorMessage = 9;
    string amount = 10;
    double fees =11;
}

message FinanceRequest{
    string id = 1;
    double amount = 2;
    string payerPhone = 3;
    string description = 4;
    string providerCode = 5;
    string payToken = 6;
}

message FinanceResponse {
    bool success = 1;
    string trace = 2;
    ProviderResponse providerResponse = 3;
    FinanceData data = 4;
}

message FinanceData{
    string payToken = 1;
    Payer payer = 2;
    Payer payee = 3;
    double  amount = 4;
}

message ProviderResponse {
    int32 code = 1;
    string status = 2;
    string message = 3;
    string date = 4;
}

message Payer{
    string partyIdType = 1;
    string partyId = 2;
}

